--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -6,3 +6,20 @@ executable_path="C:/Users/dustin.fulkerson_sea/OneDrive/Desktop/Game Engines/God
 
 run_live_debug=true
 run_reload_scripts=true
+
+[linked_properties]
+
+Control:scale=true
+Panel:scale=true
+ColorRect:scale=true
+VBoxContainer:scale=true
+MarginContainer:scale=true
+Label:scale=true
+
+[dialog_bounds]
+
+create_new_node=Rect2(510, 190, 900, 700)
+
+[color_picker]
+
+recent_presets=PackedColorArray(0, 0, 0, 1)
