--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -15,6 +15,11 @@ ColorRect:scale=true
 VBoxContainer:scale=true
 MarginContainer:scale=true
 Label:scale=true
+GridContainer:scale=true
+HBoxContainer:scale=true
+Button:scale=true
+MultiNodeEdit:scale=true
+TextureRect:scale=true
 
 [dialog_bounds]
 
@@ -22,4 +27,8 @@ create_new_node=Rect2(510, 190, 900, 700)
 
 [color_picker]
 
-recent_presets=PackedColorArray(0, 0, 0, 1)
+recent_presets=PackedColorArray(0.513726, 0.454902, 0.419608, 1, 0.921569, 0.454902, 0.419608, 1, 0, 0.454902, 0.419608, 1, 0, 0, 0.419608, 1, 0.355314, 0.355314, 0.355314, 1, 0.564962, 0.564962, 0.564962, 1, 0.564706, 0.564706, 0.564706, 1, 1, 1, 1, 1, 0, 0, 0, 1)
+
+[script_setup]
+
+last_selected_language="GDScript"
